# pypingdom

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Changelog.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  index.rst
pypingdom/: __init__.py  api.py  check.py  client.py  exception.py  gui.py  maintenance.py
pypingdom/tests/: __init__.py  test_api.py  test_check.py  test_client.py
pypingdom/tests/resources/api/2.0/: checks  servertime
pypingdom/tests/resources/api/2.0/summary.outage/: 85975
requirements/: style.txt
testing/: manualtest_check.py  test_check.py
