[metadata]
long_description = file: README.rst

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
exclude = .git,__pycache__,build,dist,.tox,.eggs,.direnv
max_line_length = 120

# https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
[aliases]
test=pytest

[check-manifest]
# https://pypi.python.org/pypi/check-manifest
ignore =
    .pre-commit-config.yaml
    .travis.yml
